--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <html>
 <head>
+    <link rel="stylesheet" href="..\styles\styles.css" />
+    <style>
+        .container {
+            width: 100%;
+            height: auto;
+            background-color: #fff;
+        }
 
+        .nav {
+            height: 20%;
+            width: inherit;
+            background-color: gray;
+
+        }
+
+        .nav .nav-item {
+            color: #fff;
+            float: left;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Test</h1>
-    <h2>Testing....</h2>
+    <div class="container">
+        <div class="nav">
+            <div class="nav-item">
+                Home
+            </div>
+        </div>
+    </div>
 </body>
 </html>
