--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Lewis Hotchen</title>
     <style>
+        
+        
+
         .cust-button {
             width: 33%;
             height: 100%;
@@ -76,7 +79,7 @@
         </div>
     </nav>
     <div id="container" style="padding: 5%;" class="content">
-        <div class="card border-dark" style="width: 80%;">
+        <div class="card border-dark screen-size">
             <div class="card-header bg-dark text-white"><h4>CV</h4></div>
             <div class="card-body">
                 <h6 class="card-subtitle mb-2 text-muted">Lewis Hotchen</h6>
